bk_ida/gccida/c3/mul_double
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mul_double/src/fold-const.c:807:12: error: expected expression
*( _OWORD *)v27 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mul_double/src/fold-const.c:807:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v27 = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mul_double/src/fold-const.c:809:12: error: expected expression
*( _OWORD *)v25 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mul_double/src/fold-const.c:809:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v25 = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mul_double/src/obj/fold-const.o] Error 1
